--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -244,11 +244,7 @@ build:linux:x86:noble:
   extends:
     - .linux_build_dependencies
     - .linux_runner
-# TODO: DOR-1161 - modbase unittests currently fail on noble
-    #- .build_and_test_dorado
-  stage: build
-  script:
-    - !reference [.run_dorado_cmake_build]
+    - .build_and_test_dorado
   before_script:
     - !reference [.linux_build_dependencies, before_script]
     - apt-get install -y build-essential
