[DOR-1130] Renamed PolishStats to just Stats. Updated the client code in Polish.

--- a/dorado/secondary/CMakeLists.txt
+++ b/dorado/secondary/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(dorado_secondary
     interval.h
     region.cpp
     region.h
+    stats.h
     variant.cpp
     variant.h
     vcf_writer.cpp
