[DOR-1130] Added unit tests for the kadayashi_utils to tests/SecondaryKadayashiUtils.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -76,6 +76,7 @@ add_executable(dorado_tests
     TrimTest.cpp
     PafUtilsTest.cpp
     SecondaryDecodeVariantsTest.cpp
+    SecondaryKadayashiUtils.cpp
     SecondaryNormalizeVariantsTest.cpp
     SecondaryMergeVCSamplesTest.cpp
     SecondarySampleTest.cpp
