[DOR-1130] Added the Kadayashi (local_haplotagging) library to dorado/3rdparty/kadayashi, and added unit tests to tests/KadayashiTest.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -387,6 +387,7 @@ target_link_libraries(dorado_lib
         minimap2
         toml11::toml11
         cxxpool
+        kadayashi::haplotag_lib
 )
 
 if(NOT DORADO_DISABLE_DORADO)
