[DOR-1130] Added unit tests for the model factory to tests/SecondaryModelFactory.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -78,6 +78,7 @@ add_executable(dorado_tests
     SecondaryKadayashiUtils.cpp
     SecondaryNormalizeVariantsTest.cpp
     SecondaryMergeVCSamplesTest.cpp
+    SecondaryModelFactory.cpp
     SecondarySampleTest.cpp
     SecondaryTrimTest.cpp
     SecondaryWindowTest.cpp
