--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,24 +51,10 @@ variables:
     - ubuntu-20.04
     - nvidia-docker
 
-.linux_cpu_runner:
-  tags:
-    - ubuntu-20.04
-    - docker-as
-
 .linux_arm64_runner:
   tags:
     - linux_aarch64
     - docker-arm
-
-.linux_tegra_runner:
-  tags:
-    - nvidia-docker-tegra-gpu
-
-.linux_orin_runner:
-  tags:
-    - linux-arm64-gpu
-    - nvidia-docker
 
 .linux_orin_cuda_12_runner:
   tags:
@@ -387,14 +373,6 @@ build:macos:arm:no_ccache:
     - .on_nightly_or_manual
   artifacts: null
 
-build_archive:linux:x86:focal:
-  image: ${DORADO_DOCKER_ROOT}/dorado-20.04-cuda-${CUDA}.0:1.0
-  extends:
-    - .linux_build_dependencies
-    - .linux_runner
-    - .build_dorado_archive
-    - .on_nightly_or_manual
-
 build_archive:linux:arm64:jammy:
   image: ${DORADO_DOCKER_ROOT}/dorado-l4t-r36.4.0:1.0
   extends:
@@ -403,24 +381,24 @@ build_archive:linux:arm64:jammy:
     - .build_dorado_archive
     - .on_nightly_or_manual
 
-build_archive:linux:x86:centos7:cuda11:
-  image: ${DORADO_DOCKER_ROOT}/dorado-centos7-cuda-${CUDA}.0:1.0
+build_archive:linux:x86:cuda11:
+  image: ${DORADO_DOCKER_ROOT}/dorado-rocky8-cuda-${CUDA}.0:test
   variables:
-    BUILD_OPTIONS: "-DDORADO_USING_OLD_CPP_ABI=ON"
     CUDA: "11.8"
+  script:
+    - source /opt/rh/gcc-toolset-11/enable
+    - !reference [.build_dorado_archive, script]
   extends:
     - .linux_runner
     - .build_dorado_archive
     - .on_nightly_or_manual
 
-build_archive:linux:x86:rocky8:
-  image: ${DORADO_DOCKER_ROOT}/dorado-rocky8-cuda-${CUDA}.0:1.0
+build_archive:linux:x86:cuda12:
+  image: ${DORADO_DOCKER_ROOT}/dorado-rocky8-cuda-${CUDA}.0:test
   variables:
     BUILD_OPTIONS: ""
   script:
     - source /opt/rh/gcc-toolset-11/enable
-    - which gcc
-    - gcc --version
     - !reference [.build_dorado_archive, script]
   extends:
     - .linux_runner
@@ -556,24 +534,26 @@ test:macos:arm:
           - "nvidia/cuda:${CUDA}.0-devel-ubuntu20.04"
           - "nvidia/cuda:${CUDA}.0-devel-ubuntu22.04"
           - "nvidia/cuda:${CUDA}.0-devel-ubuntu24.04"
+          - "nvidia/cuda:${CUDA}.0-devel-rockylinux8"
       # CPU environment
       - RUNNER_TAG: "docker-as"
         IMAGE:
           - "${DORADO_DOCKER_EXT}/ubuntu:20.04"
           - "${DORADO_DOCKER_EXT}/ubuntu:22.04"
           - "${DORADO_DOCKER_EXT}/ubuntu:24.04"
-# CUDA 11 build
+          - "${DORADO_DOCKER_EXT}/rockylinux:8"
+
 test_archive:linux:x86:cuda11:
   extends:
     - .test_archive:linux:x86
   needs:
-    - build_archive:linux:x86:centos7:cuda11
-# CUDA 12 build
-test_archive:linux:x86:focal:cuda12:
+    - build_archive:linux:x86:cuda11
+
+test_archive:linux:x86:cuda12:
   extends:
     - .test_archive:linux:x86
   needs:
-    - build_archive:linux:x86:focal
+    - build_archive:linux:x86:cuda12
 
 # Test that you can run dorado in a clean l4t environment
 test_archive:linux:arm64:22.04:
@@ -633,8 +613,8 @@ deploy:all:
       - archive
     expire_in: 1 day
   needs:
-    - build_archive:linux:x86:centos7:cuda11
-    - build_archive:linux:x86:focal
+    - build_archive:linux:x86:cuda11
+    - build_archive:linux:x86:cuda12
     - build_archive:linux:arm64:jammy
     - build_archive:macos:arm
     - build_archive:windows
