--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -447,6 +447,7 @@ build_archive:macos:arm:
     - bash ./tests/test_dorado_correct.sh ./dist/bin/dorado
     - bash ./tests/test_dorado_correct_cram.sh ./dist/bin/dorado
     - bash ./tests/test_dorado_polish.sh ./dist/bin/dorado
+    - bash ./tests/test_dorado_variant.sh ./dist/bin/dorado
 
 .test_dorado_windows:
   stage: test
