[DOR-1236] Added dorado/utils/jthread.h.

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -35,6 +35,7 @@ add_library(dorado_utils
     gzip_reader.h
     hts_file.cpp
     hts_file.h
+    jthread.h
     locale_utils.cpp
     locale_utils.h
     log_utils.cpp
