[DOR-1250] Updated the CI test runner to install tabix for bgzip, required by some Polish tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ variables:
   before_script:
     - echo Dorado dependency stage
     - apt-get update
-    - apt-get install -y --no-install-recommends samtools curl
+    - apt-get install -y --no-install-recommends samtools curl tabix
 
 .set_parallel_jobs:
   - |
