[DOR-1265] Apply new structure to dorado_models

--- a/dorado/models/CMakeLists.txt
+++ b/dorado/models/CMakeLists.txt
@@ -1,18 +1,28 @@
 add_library(dorado_models_lib STATIC
+    # Public
+    include/models/kits.h
+    include/models/metadata.h
+    include/models/model_complex.h
+    include/models/models.h
+
+    # Private
     kits.cpp
-    kits.h
     metadata.cpp
-    metadata.h
-    model_complex.h
     model_complex.cpp
     models.cpp
-    models.h
 )
 
 target_link_libraries(dorado_models_lib
     PRIVATE
         dorado_utils
         spdlog::spdlog
+)
+
+target_include_directories(dorado_models_lib
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    INTERFACE
+        ${CMAKE_CURRENT_SOURCE_DIR}/.. # TODO: remove this once dependents are fixed
 )
 
 enable_warnings_as_errors(dorado_models_lib)
