--- a/dorado/file_info/CMakeLists.txt
+++ b/dorado/file_info/CMakeLists.txt
@@ -1,15 +1,22 @@
 add_library(dorado_file_info STATIC
+    # Public
+    include/file_info/file_info.h
+
+    # Private
     file_info.cpp
-    file_info.h
 )
 
 target_link_libraries(dorado_file_info
-PUBLIC
-    dorado_models_lib
-    dorado_utils
-PRIVATE
-    pod5_libs
-    ${ZLIB_LIBRARIES}
+    PUBLIC
+        dorado_models_lib
+        dorado_utils
+    PRIVATE
+        pod5_libs
+)
+
+target_include_directories(dorado_file_info
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 enable_warnings_as_errors(dorado_file_info)
