[DOR-1265] Apply new structure to dorado_config

--- a/dorado/config/CMakeLists.txt
+++ b/dorado/config/CMakeLists.txt
@@ -1,14 +1,17 @@
 add_library(dorado_config STATIC
+    # Public
+    include/config/BatchParams.h
+    include/config/BasecallModelConfig.h
+    include/config/common.h
+    include/config/ModBaseBatchParams.h
+    include/config/ModBaseModelConfig.h
+
+    # Private
     BatchParams.cpp
-    BatchParams.h
     BasecallModelConfig.cpp
-    BasecallModelConfig.h
     common.cpp
-    common.h
     ModBaseBatchParams.cpp
-    ModBaseBatchParams.h
     ModBaseModelConfig.cpp
-    ModBaseModelConfig.h
 )
 
 target_link_libraries(dorado_config
@@ -18,6 +21,11 @@ target_link_libraries(dorado_config
         dorado_utils
         spdlog::spdlog
         toml11::toml11
+)
+
+target_include_directories(dorado_config
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 enable_warnings_as_errors(dorado_config)
